# TaskManagerEmb

./: .gitignore  CMakeLists.txt  README.md  command.md  toolchain.cmake
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
google_test/: CMakeLists.txt
google_test/unit_test/: CMakeLists.txt  main_test.cpp
google_test/unit_test/include/: network_manager_test.h  productivity_report_test.h  security_manager_test.h  synch_manager_test.h  task_execution_strategy_test.h  task_factory_test.h
ressources/database/: db.sql
src/: CMakeLists.txt  assets.qrc  config.ini  main.cpp  qtquickcontrols2.conf
src/calendar/: eventmodel.cpp  eventmodel.h
src/controllers/: main_controller.cpp  main_controller.h  navigation_controller.h  network_config_controller.cpp  network_config_controller.h
src/encryptage/: encryption_service.cpp
src/include/: aesencryption_strategy.h  authorization_manager.h  close_connection_command.h  database_manager.h  encryption_service.h  encryption_strategy.h  exception_manager.h  form_validator.h  imodel_mapper.h  max_task_exception.h  monthly_subscription_factory.h  montly_subscription.h  network_command.h  network_config.h  network_log.h  network_manager.h  network_monitor.h  notification_manager.h  open_connection_command.h  project_task.h  projet_task_mapper.h  receive_data_command.h  recurring_task.h  security_manager.h  send_data_command.h  simple_task.h  ssh_manager.h  subscription.h  subscription_factory.h  subscription_manager.h  subscription_mapper.h  subscription_type.h  synch_config.h  synch_manager.h  task.h  task_factory.h  task_list_model.h  task_manager.h  task_mapper.h  task_observer.h  (+6 more)
src/iterator/: task_iterator.cpp  task_iterator.h
src/manager/: authorization_manager.cpp  database_manager.cpp  network_manager.cpp  notification_manager.cpp  security_manager.cpp  ssh_manager.cpp  subscription_manager.cpp  synch_config.cpp  synch_manager.cpp  task_manager.cpp  user_manager.cpp
src/mapper/: projet_task_mapper.cpp  subscription_mapper.cpp  task_list_model.cpp  task_mapper.cpp  user_mapper.cpp
src/network/: close_connection_command.cpp  network_config.cpp  network_log.cpp  network_monitor.cpp  open_connection_command.cpp  receive_data_command.cpp  send_data_command.cpp  udp_send_command.cpp
src/notification/: notification.cpp  notification.h
src/profiler/: profiler.cpp  profiler.h
src/qml/: assets.qrc  components.qrc  views.qrc
src/qml/assets/: Style.qml
src/qml/components/: AboutTask.qml  FooterBar.qml  InputText.qml  MonthGridDelegate.qml  MyComboBox.qml  NavigationBar.qml  NavigationButton.qml  StatusBar.qml  SubscriptionHistoryRow.qml  SubscriptionTypeCard.qml  TaskCard.qml  qmldir
src/qml/views/: EventCalendar.qml  FormValidator.qml  LoginScreen.qml  Main.qml  MonthGridDelegate.qml  NetworkConfigScreen.qml  NetworkLogScreen.qml  NetworkMonitoringScreen.qml  RetentionConfigScreen.qml  SplashScreen.qml  StatisticScreen.qml  SubscriptionCreateScreen.qml  SubscriptionDetailScreen.qml  SubscriptionStateScreen.qml  TaskDetailScreen.qml  TaskEditScreen.qml  TaskListScreen.qml  UserScreen.qml
src/qml/views/notification/: NotificationButton.qml  NotificationItem.qml  NotificationManager.qml  NotificationScreen.qml
src/qml/views/task/: TaskCreateScreen.qml
src/report/: productivityReport.cpp  productivityReport.h  report_template.h
src/scheduler/: scheduler.cpp  scheduler.h
src/src/: aesencryption_strategy.cpp  form_validator.cpp  max_task_exception.cpp  project_task.cpp  recurring_task.cpp  simple_task.cpp  task.cpp  task_factory.cpp  task_observer.cpp  user.cpp
src/statistics/: statistics_manager.cpp  statistics_manager.h  statistics_model.cpp  statistics_model.h  statistics_observer.h  statistics_subject.cpp  statistics_subject.h
src/subscription/: monthly_subscription_factory.cpp  montly_subscription.cpp  subscription.cpp  subscription_factory.cpp  subscription_type.cpp  yearly_subscription.cpp  yearly_subscription_factory.cpp
src/taskExecution/: iasync_task_execution.h  itask_execution_strategy.h  parallel_execution_strategy.cpp  parallel_execution_strategy.h  prioritized_execution_strategy.cpp  prioritized_execution_strategy.h  qt_concurrent_async_execution.cpp  qt_concurrent_async_execution.h  qthreadpool_async_execution.cpp  qthreadpool_async_execution.h  sequential_execution_strategy.cpp  sequential_execution_strategy.h  simple_execution_strategy.cpp  simple_execution_strategy.h  timer_based_async_execution.cpp  timer_based_async_execution.h
src/tests/: form_validator_test.cpp  form_validator_test.h  network_test.cpp  network_test.h
